# imd-national-catalogue

./: .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  OVERLEAF.md  README.md  imd_national.tex  pyproject.toml  references.bib  references_imd.bib  requirements.txt  sync_overleaf.sh
app/: README.md
catalogue/: README.md  communes_imd_audit_summary.csv  communes_imd_national.parquet
data/source/: README.md  ies_national_communes.csv
experiments/: README.md
huggingface/: README.md
imd_pipeline/: __init__.py  core.py
notebooks/: README.md
paper/: README.md  imd_national.tex
paper_demand/: imd_demand.tex  references_demand.bib
paper_demand/data_collection/: _fill_elevations.py  imd_international.py  tier1_downloader.py  tier2_pseudo_flow.py  world_candidates.py
paper_demand/data_collection/imd_international/: boston_bluebikes.parquet  chicago_divvy.parquet  dc_capitalbikeshare.parquet  nyc_citibike.parquet  sf_baywheels.parquet
paper_demand/data_collection/tier2_pseudo_flow/: CVelo_FR_Clermont-Ferrand.parquet  Optymo_Belfort_ALS.parquet  Paris.parquet  _summary.csv  amiens.parquet  auxrmlevelo.parquet  beb.parquet  besancon.parquet  calais-velos.parquet  capcotentin.parquet  cergy.parquet  citiz_alpes_loire.parquet  citiz_angers.parquet  citiz_bfc.parquet  citiz_grand_est.parquet  citiz_grand_poitiers.parquet  citiz_la_rochelle.parquet  citiz_occitanie.parquet  citiz_rennes_metropole.parquet  donkey_brest.parquet  donkey_valenciennes.parquet  libelo.parquet  (+22 more)
paper_demand/experiments/: d1_demand_model.py  d2_full_benchmark.py  d3_multicity_benchmark.py  d4_cross_city_transfer.py  d5_availability_benchmark.py  d5_availability_lstm.py
paper_demand/related/: IMPROVEMENT_PLAN.md  pallares2026_availability.tex
paper_demand/scripts/: _safe_run.sh  vacation_orchestrator.sh  vacation_orchestrator_lite.sh  vacation_orchestrator_v2.sh  vacation_status.sh
paper_social/: imd_social.tex  references_social.bib
scripts/: README.md  regenerate.py
tests/: test_catalogue.py  test_scaffold.py
(+16 files in other folders)
